--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,10 @@
 {
   "name": "hryvinskyi/magento2-csp",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "N/A",
   "type": "magento2-module",
   "require": {
+    "php": "8.1 || 8.2 || 8.3 || 8.4",
     "magento/framework": "*",
     "magento/module-csp": "*",
     "ext-simplexml": "*"
