--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "description": "N/A",
   "type": "magento2-module",
   "require": {
-    "php": "8.1 || 8.2 || 8.3 || 8.4",
+    "php": ">=8.1 <8.5",
     "magento/framework": "*",
     "magento/module-csp": "*",
     "ext-simplexml": "*"
