--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "hryvinskyi/magento2-csp",
-  "version": "1.0.10.2",
+  "version": "1.1.0-alpha",
   "description": "N/A",
   "type": "magento2-module",
   "require": {
