--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "hryvinskyi/magento2-csp",
-  "version": "1.1.7",
-  "description": "N/A",
+  "version": "1.2.0",
+  "description": "Advanced Content Security Policy (CSP) module for Magento 2 with whitelist management, violation reports, header splitting, and value optimization",
   "type": "magento2-module",
   "require": {
     "php": ">=8.1 <8.5",
@@ -9,6 +9,9 @@
     "magento/module-csp": "*",
     "hryvinskyi/magento2-logger": "*",
     "ext-simplexml": "*"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^9.0 || ^10.0"
   },
   "authors": [
     {
@@ -23,6 +26,11 @@
     ],
     "psr-4": {
       "Hryvinskyi\\Csp\\": ""
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Hryvinskyi\\Csp\\Test\\": "Test/"
     }
   }
 }
